--- a/todo-backend/package.json
+++ b/todo-backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+  "test": "jest",
+  "start": "node start.js",
+  "dev": "nodemon start.js"
   },
   "keywords": [],
   "author": "",
